Closed
Bug 1655919
Opened 5 years ago
Closed 5 years ago
[Wayland] DMABuf can't be enabled on Wayland
Categories
(Core :: Widget: Gtk, defect)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
81 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | fixed |
| firefox81 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
This is a regression from Bug 1650748.
UseEGL() is set at GfxInfo::GetData() before gfxPlatformGtk() init so it always false. Then GetDMABufDevice() is configured as on non-EGL systems and it's disabled.
| Assignee | ||
Updated•5 years ago
|
Blocks: egl-linux-dmabuf
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Keywords: regression
Comment 2•5 years ago
|
||
Set release status flags based on info from the regressing bug 1650748
status-firefox79:
--- → unaffected
status-firefox80:
--- → affected
status-firefox81:
--- → affected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Updated•5 years ago
|
Attachment #9166781 -
Attachment description: Bug 1655919 [Wayland] Don't configure dmabuf at GfxInfo::GetData() as it can be called before gfxPlatformGtk() creation, r?rmader → Bug 1655919 [Wayland] Always initialize DMABuf when user asks for it r?rmader
Pushed by csabou@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0545a50192b6
[Wayland] Always initialize DMABuf when user asks for it r=rmader
Comment 4•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Comment 5•5 years ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
Flags: needinfo?(stransky)
| Assignee | ||
Comment 6•5 years ago
|
||
Comment on attachment 9166781 [details]
Bug 1655919 [Wayland] Always initialize DMABuf when user asks for it r?rmader
Beta/Release Uplift Approval Request
- User impact if declined: Non-working WebGL dmabuf / VA-API on Wayland/Linux.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Moves check for EGL backend later when the configuration is loaded. Limited scope (Linux/Wayland).
- String changes made/needed: none
Flags: needinfo?(stransky)
Attachment #9166781 -
Flags: approval-mozilla-beta?
Comment 7•5 years ago
|
||
Comment on attachment 9166781 [details]
Bug 1655919 [Wayland] Always initialize DMABuf when user asks for it r?rmader
approved for 80.0b4
Attachment #9166781 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•