Bug 1655919 [Wayland] Always initialize DMABuf when user asks for it r=rmader

- We miss EGL status when DMABuf is initialized so don't check it, check only DMABuf preferences. There's no harm to initialize DMABuf on GLX
  even when it's not used then.

Differential Revision: https://phabricator.services.mozilla.com/D85259